# miru

./: .gitignore  README.md  pyproject.toml
examples/weather_app/: main.py
examples/weather_app/frontend/src/: App.vue
examples/weather_app/frontend/src/components/: WeatherBlock.vue
examples/weather_app/src/: App.vue
miru/: __init__.py  __main__.py  misc.py
miru/browsers/: __init__.py  base.py  chrome.py  chromium.py  edge.py
miru/server/: __init__.py  routes.py  runner.py  utils.py  websockets.py
miru/utils/: dataclasses.py  enums.py
miru/web/: miru.js
